--- a/kubernetes/manifests/backstage/kustomization.yaml
+++ b/kubernetes/manifests/backstage/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 resources:
 - namespace.yaml
 - rbac.yaml
+- postgres.yaml
+- pg-svc.yaml
 - deployment.yaml
 - service.yaml
 - configmap.yaml
