--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -26,6 +26,27 @@ spec:
         env:
         - name: NODE_ENV
           value: development
+        # Configure PostgreSQL
+        - name: POSTGRES_HOST
+          value: "backstage-postgres"
+        - name: POSTGRES_PORT
+          value: "5432"
+        - name: POSTGRES_USER
+          value: "backstage"
+        - name: POSTGRES_PASSWORD
+          value: "backstage"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_client
+          value: "pg"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_host
+          value: "backstage-postgres"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_port
+          value: "5432"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_user
+          value: "backstage"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_password
+          value: "backstage"
+        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_database
+          value: "backstage"
         # Disable Kubernetes plugin
         - name: BACKSTAGE_APP_CONFIG_kubernetes_enabled
           value: "false"
@@ -37,13 +58,6 @@ spec:
         # Disable permissions
         - name: BACKSTAGE_APP_CONFIG_permission_enabled
           value: "false"
-        # Configure SQLite
-        - name: BACKSTAGE_APP_CONFIG_backend_database_client
-          value: "better-sqlite3"
-        - name: BACKSTAGE_APP_CONFIG_backend_database_connection
-          value: ":memory:"
-        - name: BACKSTAGE_APP_CONFIG_backend_database_connection_host
-          value: ""
         # Configure app title
         - name: BACKSTAGE_APP_CONFIG_app_title
           value: "ML Platform"
@@ -56,12 +70,8 @@ spec:
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_target
           value: "https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_type
-          value: "url"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
-          value: "https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/acme-corp.yaml"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_type
           value: "file"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_target
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
           value: "/app/examples/ml-models.yaml"
         resources:
           limits:
@@ -73,7 +83,6 @@ spec:
         volumeMounts:
         - name: examples
           mountPath: /app/examples
-      # Add under spec.template.spec
       volumes:
       - name: examples
         configMap:
