--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -73,6 +73,10 @@ spec:
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
           value: "/app/examples/ml-models.yaml"
+        - name: BACKSTAGE_APP_CONFIG_catalog_rules_0_allow
+          value: "[Component, System, API, Resource, Location, Template, Group, User]"
+        - name: BACKSTAGE_APP_CONFIG_catalog_rules_1_allow
+          value: "[ml-model]"
         resources:
           limits:
             memory: "1Gi"
