--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -65,7 +65,12 @@ spec:
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_type
           value: "url"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_target
-          value: "https://github.com/backstage/backstage/blob/master/packages/catalog-model/examples/all.yaml"
+          value: "https://raw.githubusercontent.com/backstage/backstage/master/packages/catalog-model/examples/all-components.yaml"
+        # Add additional example components
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_type
+          value: "url"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_target
+          value: "https://raw.githubusercontent.com/backstage/backstage/master/packages/catalog-model/examples/acme-corp.yaml"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_type
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
@@ -74,6 +79,12 @@ spec:
           value: "[Component, System, API, Resource, Location, Template, Group, User]"
         - name: BACKSTAGE_APP_CONFIG_catalog_rules_1_allow
           value: "[ml-model]"
+        - name: BACKSTAGE_APP_CONFIG_backend_logging_level  
+          value: "debug"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_type
+          value: "file"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_target
+          value: "/app/direct/direct-entity.yaml"
         resources:
           limits:
             memory: "1Gi"
@@ -84,7 +95,12 @@ spec:
         volumeMounts:
         - name: catalog-data
           mountPath: /app/examples
+        - name: direct-entity
+          mountPath: /app/direct
       volumes:
       - name: catalog-data
         configMap:
           name: backstage-catalog
+      - name: direct-entity
+        configMap:
+          name: direct-entity
