--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -74,7 +74,7 @@ spec:
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_type
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
-          value: "/app/examples/ml-models.yaml"
+          value: "/app/catalog-data/ml-models.yaml"
         - name: BACKSTAGE_APP_CONFIG_catalog_rules_0_allow
           value: "[Component, System, API, Resource, Location, Template, Group, User]"
         - name: BACKSTAGE_APP_CONFIG_catalog_rules_1_allow
