--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -58,15 +58,14 @@ spec:
         # Disable permissions
         - name: BACKSTAGE_APP_CONFIG_permission_enabled
           value: "false"
-        # Configure app title
         - name: BACKSTAGE_APP_CONFIG_app_title
           value: "ML Platform"
-        # Add example catalog location
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_type
           value: "url"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_target
           value: "https://raw.githubusercontent.com/backstage/backstage/master/packages/catalog-model/examples/all-components.yaml"
-        # Add additional example components
+        - name: BACKSTAGE_APP_CONFIG_catalog_rules_0_allow
+          value: "[Component, System, API, Resource, Location, Template, Group, User]"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_type
           value: "url"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_target
@@ -75,17 +74,14 @@ spec:
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
           value: "/app/catalog-data/ml-models.yaml"
-        - name: BACKSTAGE_APP_CONFIG_catalog_rules_0_allow
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_rules_0_allow
           value: "[Component, System, API, Resource, Location, Template, Group, User]"
-        - name: BACKSTAGE_APP_CONFIG_catalog_rules_1_allow
-          value: "/app/catalog-data/ml-models.yaml"
         - name: BACKSTAGE_APP_CONFIG_backend_logging_level  
           value: "debug"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_type
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_target
           value: "/app/direct/direct-entity.yaml"
-        # Enable anonymous access to the API
         - name: BACKSTAGE_APP_CONFIG_auth_allowGuestAccess
           value: "true"
         - name: BACKSTAGE_APP_CONFIG_backend_auth_keys
