--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -26,7 +26,7 @@ spec:
         env:
         - name: NODE_ENV
           value: development
-        # Configure PostgreSQL
+        # Database configuration
         - name: POSTGRES_HOST
           value: "backstage-postgres"
         - name: POSTGRES_PORT
@@ -47,49 +47,37 @@ spec:
           value: "backstage"
         - name: BACKSTAGE_APP_CONFIG_backend_database_connection_database
           value: "backstage"
-        # Disable Kubernetes plugin
-        - name: BACKSTAGE_APP_CONFIG_kubernetes_enabled
-          value: "false"
-        # Enable guest authentication
+        # Auth configuration
         - name: BACKSTAGE_APP_CONFIG_auth_providers_guest_enabled
           value: "true"
-        - name: BACKSTAGE_APP_CONFIG_auth_providers_guest_authHandler_allowGuestAccess
+        - name: BACKSTAGE_APP_CONFIG_auth_allowGuestAccess
           value: "true"
-        # Disable permissions
-        - name: BACKSTAGE_APP_CONFIG_permission_enabled
-          value: "false"
+        # App configuration
         - name: BACKSTAGE_APP_CONFIG_app_title
           value: "ML Platform"
+        # Catalog configuration - SIMPLIFIED
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_type
-          value: "url"
+          value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_target
-          value: "https://raw.githubusercontent.com/backstage/backstage/master/packages/catalog-model/examples/all-components.yaml"
-        - name: BACKSTAGE_APP_CONFIG_catalog_rules_0_allow
+          value: "/app/examples/entities.yaml"
+        - name: BACKSTAGE_APP_CONFIG_catalog_providers_file_bootstrap
+          value: "true"
+        - name: BACKSTAGE_APP_CONFIG_catalog_providers_file_bootstrapPath
+          value: "/app/examples"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_0_rules_0_allow
           value: "[Component, System, API, Resource, Location, Template, Group, User]"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_type
-          value: "url"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_target
-          value: "https://raw.githubusercontent.com/backstage/backstage/master/packages/catalog-model/examples/acme-corp.yaml"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_rules_0_allow
+          value: "[Component, System, API, Resource, Location, Template, Group, User]"
+        # Reset database on startup to clear any stale entities
+        - name: BACKSTAGE_APP_CONFIG_catalog_database_resetOnStartup
+          value: "true"
+        # Debug options
+        - name: BACKSTAGE_APP_CONFIG_backend_logging_level
+          value: "debug"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_type
           value: "file"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_target
-          value: "/app/catalog-data/ml-models.yaml"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_1_rules_0_allow
-          value: "[Component, System, API, Resource, Location, Template, Group, User]"
-        - name: BACKSTAGE_APP_CONFIG_backend_logging_level  
-          value: "debug"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_type
-          value: "file"
-        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_target
-          value: "/app/direct/direct-entity.yaml"
-        - name: BACKSTAGE_APP_CONFIG_auth_allowGuestAccess
-          value: "true"
-        - name: BACKSTAGE_APP_CONFIG_backend_auth_keys
-          value: "temporary-auth-key"
-        - name: BACKSTAGE_APP_CONFIG_backend_auth_allowedHeaders
-          value: "authorization,x-requested-with,x-forwarded-user"
-        - name: BACKSTAGE_APP_CONFIG_backend_auth_skipDefaultsForPath
-          value: "[/api/catalog/locations, /api/catalog/entities]"
+          value: "/app/examples/templates.yaml"
         resources:
           limits:
             memory: "1Gi"
@@ -98,28 +86,16 @@ spec:
             memory: "512Mi"
             cpu: "250m"
         volumeMounts:
-        - name: catalog-data
-          mountPath: /app/catalog-data
-        - name: direct-entity
-          mountPath: /app/direct
-        - name: additional-examples
+        - name: entities
           mountPath: /app/examples/entities.yaml
           subPath: entities.yaml
-        - name: additional-examples
-          mountPath: /app/examples/org.yaml
-          subPath: org.yaml
-        - name: template-example
-          mountPath: /app/examples/template
+        - name: templates
+          mountPath: /app/examples/templates.yaml
+          subPath: templates.yaml
       volumes:
-      - name: catalog-data
+      - name: entities
         configMap:
-          name: backstage-catalog
-      - name: direct-entity
+          name: backstage-entities
+      - name: templates
         configMap:
-          name: direct-entity
-      - name: additional-examples
-        configMap:
-          name: backstage-additional-examples
-      - name: template-example
-        configMap:
-          name: backstage-template-example
+          name: backstage-templates
