--- a/kubernetes/manifests/backstage/backstage-entities.yaml
+++ b/kubernetes/manifests/backstage/backstage-entities.yaml
@@ -13,6 +13,7 @@ data:
       description: Default team
     spec:
       type: team
+      parent: 'system' 
       children: []
     ---
     # User entity
