--- a/kubernetes/manifests/backstage/rbac.yaml
+++ b/kubernetes/manifests/backstage/rbac.yaml
@@ -1,39 +1,27 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: backstage
+  name: backstage-k8s-reader
   namespace: backstage
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: backstage-reader
+  name: backstage-k8s-reader
 rules:
   - apiGroups: [""]
-    resources: ["pods", "services", "configmaps", "secrets", "events", "namespaces"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: ["apps"]
-    resources: ["deployments", "replicasets", "statefulsets"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: ["batch"]
-    resources: ["jobs", "cronjobs"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: ["networking.k8s.io"]
-    resources: ["ingresses"]
-    verbs: ["get", "list", "watch"]
-  - apiGroups: ["autoscaling"]
-    resources: ["horizontalpodautoscalers"]
+    resources: ["pods", "services", "configmaps", "deployments"]
     verbs: ["get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: backstage-reader-binding
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: backstage-reader
+  name: backstage-k8s-reader
 subjects:
   - kind: ServiceAccount
-    name: backstage
+    name: backstage-k8s-reader
     namespace: backstage
+roleRef:
+  kind: ClusterRole
+  name: backstage-k8s-reader
+  apiGroup: rbac.authorization.k8s.io
