--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -13,7 +13,7 @@ spec:
       labels:
         app: backstage
     spec:
-      serviceAccountName: backstage
+      serviceAccountName: backstage-k8s-reader
       tolerations:
       - key: "nvidia.com/gpu"
         operator: "Exists"
@@ -24,11 +24,6 @@ spec:
         ports:
         - containerPort: 7007
         env:
-        - name: K8S_SERVICE_ACCOUNT_TOKEN
-          valueFrom:
-            secretKeyRef:
-              name: backstage-k8s-reader-token
-              key: token
         - name: K8S_CLUSTER_URL
           value: "https://kubernetes.default.svc.cluster.local"
         - name: NODE_ENV
@@ -99,13 +94,7 @@ spec:
         - name: templates
           mountPath: /app/examples/templates.yaml
           subPath: templates.yaml
-        - name: backstage-k8s-reader-token
-          mountPath: /var/run/secrets/kubernetes.io/serviceaccount
-          readOnly: true
       volumes:
-      - name: backstage-k8s-reader-token
-        secret:
-          secretName: backstage-k8s-reader-token
       - name: entities
         configMap:
           name: backstage-entities
