--- a/kubernetes/manifests/backstage/backstage-entities.yaml
+++ b/kubernetes/manifests/backstage/backstage-entities.yaml
@@ -5,26 +5,22 @@ metadata:
   namespace: backstage
 data:
   entities.yaml: |
-    apiVersion: backstage.io/v1alpha1
-    kind: Group
-    metadata:
-      name: default-team
-      namespace: development  # Changed from default to development
-      description: Default team
-    spec:
-      type: team
-      parent: 'system' 
-      children: []
-    ---
-    # User entity
-    apiVersion: backstage.io/v1alpha1
     kind: User
+    apiVersion: backstage.io/v1alpha1
     metadata:
       name: guest
-      namespace: development  # Changed from default to development
-      description: Guest User
+      namespace: development
     spec:
       memberOf: [default-team]
+    ---
+    kind: Group
+    apiVersion: backstage.io/v1alpha1
+    metadata:
+      name: default-team
+      namespace: development
+    spec:
+      type: team
+      members: [user:development/guest]
     ---
     # Example website
     apiVersion: backstage.io/v1alpha1
