--- a/kubernetes/manifests/backstage/kustomization.yaml
+++ b/kubernetes/manifests/backstage/kustomization.yaml
@@ -1,12 +1,28 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- namespace.yaml
-- rbac.yaml
-- postgres.yaml
-- pg-svc.yaml
-- deployment.yaml
-- service.yaml
-- ingress.yaml
+- backstage-app-config.yaml
 - backstage-entities.yaml
+- backstage-location.yaml
 - backstage-templates.yaml
+- deployment.yaml
+- ingress.yaml
+- kustomization.yaml
+- namespace.yaml
+- pg-svc.yaml
+- postgres.yaml
+- rbac.yaml
+- service.yaml
+
+
+
+
+
+
+
+
+
+
+
+
+
