--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -106,6 +106,9 @@ spec:
         - name: templates
           mountPath: /app/examples/templates.yaml
           subPath: templates.yaml
+        - name: backstage-app-config
+          mountPath: /app/config
+          subPath: app-config.yaml
       volumes:
       - name: entities
         configMap:
@@ -113,3 +116,6 @@ spec:
       - name: templates
         configMap:
           name: backstage-templates
+      - name: backstage-app-config
+        configMap:
+          name: backstage-app-config
