--- a/kubernetes/manifests/backstage/backstage-location.yaml
+++ b/kubernetes/manifests/backstage/backstage-location.yaml
@@ -8,9 +8,9 @@ data:
     apiVersion: backstage.io/v1alpha1
     kind: Location
     metadata:
-      name: example-entities
-      description: Our organization's entity catalog
+      name: ml-model-templates
+      description: Templates for creating ML model deployments
     spec:
-      type: configmap
-      target: backstage/backstage-entities
-      presence: required
+      type: url
+      targets:
+        - https://github.com/re-cinq/meetup-ai/blob/main/backstage/templates/ml-model-template.yaml
