fix access to template

--- a/kubernetes/manifests/backstage/backstage-app-config.yaml
+++ b/kubernetes/manifests/backstage/backstage-app-config.yaml
@@ -17,6 +17,8 @@ data:
                 - Component
             - type: url
               target: https://raw.githubusercontent.com/re-cinq/meetup-ai/main/backstage/templates/ml-model-template.yaml
+              auth:
+                token: ${GITHUB_TOKEN}
     
     # Enable events plugin
     events:
