--- a/kubernetes/manifests/backstage/deployment.yaml
+++ b/kubernetes/manifests/backstage/deployment.yaml
@@ -106,6 +106,25 @@ spec:
           value: "[Template]"
         - name: BACKSTAGE_APP_CONFIG_catalog_locations_2_auth_token
           value: "${GITHUB_TOKEN}"
+        # Add these environment variables after your existing ones
+        - name: BACKSTAGE_APP_CONFIG_techdocs_builder
+          value: "local"
+        - name: BACKSTAGE_APP_CONFIG_techdocs_generator_runIn
+          value: "docker"
+        - name: BACKSTAGE_APP_CONFIG_techdocs_publisher_type
+          value: "local"
+        # Fix the Kubernetes auth provider
+        - name: BACKSTAGE_APP_CONFIG_kubernetes_clusterLocatorMethods_0_clusters_0_authProvider
+          value: "serviceAccount"
+        - name: BACKSTAGE_APP_CONFIG_kubernetes_clusterLocatorMethods_0_clusters_0_skipMetricsLookup
+          value: "true"
+        # Add this environment variable
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_type
+          value: "file"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_target
+          value: "/app/templates/ml-model-template.yaml"
+        - name: BACKSTAGE_APP_CONFIG_catalog_locations_3_rules_0_allow
+          value: "[Template]"
         resources:
           limits:
             memory: "1Gi"
@@ -123,6 +142,9 @@ spec:
         - name: backstage-app-config
           mountPath: /app/app-config.yaml
           subPath: app-config.yaml
+        - name: ml-model-template
+          mountPath: /app/templates/ml-model-template.yaml
+          subPath: ml-model-template.yaml
       volumes:
       - name: entities
         configMap:
@@ -133,3 +155,6 @@ spec:
       - name: backstage-app-config
         configMap:
           name: backstage-app-config
+      - name: ml-model-template
+        configMap:
+          name: ml-model-template
